[workspace]
members = [
    "yq",
    "yq-async",
    "yq-sync",
    "yq-scheduler",
    "examples/*",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Bob <bob22.zhang@gmail.com>"]
license = "MIT"
repository = "https://github.com/bob22z/yq"

[workspace.dependencies]
redis = { version = "0.22", features = ["tokio-comp", "connection-manager"] }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

yq = { path = "yq", version = "0.3" }
yq-async = { path = "yq-async", version = "0.3" }
yq-sync = { path = "yq-sync", version = "0.3" }
