[package]
name = "yq"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["job", "queue"]
description = "Yet another job queue"
documentation = "https://docs.rs/yq"

[dependencies]
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true