[package]
name = "yq-async-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
redis.workspace = true
time.workspace = true
yq.workspace = true
yq-async.workspace = true
async-trait.workspace = true
tokio.workspace = true