[package]
name = "yq-sync-example"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
redis.workspace = true
time.workspace = true
yq.workspace = true
yq-sync.workspace = true